<resources>
    <string name="app_name">Hotspots</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="text">TEXT</string>
    <string name="photo">PHOTO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_pin">NewPin</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="anonymous">Anonymous</string>
    <string name="username">USERNAME</string>

    <!--Shared Preferences keys-->
    <string name="pref">PREF</string>
    <string name="liked_posts">liked_posts</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_password">Password field is empty</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_external">External Storage Permissions needed to save pictures</string>
    <string name="TAG">LoginActivity</string>

    <!--Radio buttons-->
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
